# scitex-introspect

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: docs.yml  import-smoke-on-ubuntu-py3-12.yml  pr-ci.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  release-ci.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-dev-quality-audit-on-ubuntu-latest.yml  test.yml
.scitex/dev/: config.yaml
docs/sphinx/: api.rst  conf.py  index.rst
examples/: quickstart.py
src/scitex_introspect/: __init__.py  _is_defined.py  _is_later_or_equal.py  _list_packages.py  _src.py  _this_file.py
src/scitex_introspect/_skills/scitex-introspect/: 01_installation.md  02_quick-start.md  03_python-api.md  SKILL.md
src/scitex_introspect/_sphinx_html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/scitex_introspect/_sphinx_html/.doctrees/: api.doctree  index.doctree
src/scitex_introspect/_sphinx_html/.doctrees/api/: scitex_introspect.doctree
src/scitex_introspect/_sphinx_html/_modules/: index.html
src/scitex_introspect/_sphinx_html/_modules/scitex_introspect/: _call_graph.html  _class_hierarchy.html  _docstring.html  _examples.html  _imports.html  _list_api.html  _members.html  _resolve.html  _signature.html  _source.html  _type_hints.html
src/scitex_introspect/_sphinx_html/_sources/: api.rst.txt
src/scitex_introspect/_sphinx_html/api/: scitex_introspect.html
tests/: conftest.py
tests/develop/: test_audit.py
tests/examples/: test_quickstart.py
tests/integration/: test_cross_package_imports.py  test_examples.py
tests/scitex_introspect/: test__call_graph.py  test__class_hierarchy.py  test__docstring.py  test__examples.py  test__imports.py  test__is_defined.py  test__is_later_or_equal.py  test__list_packages.py  test__members.py  test__resolve.py  test__signature.py  test__source.py  test__src.py  test__this_file.py  test__type_hints.py
tests/scitex_introspect/_mcp/: test_handlers.py
(+1 files in other folders)
